<?xml version="1.0"?>
<package format="2">
    <name>camera_to_map_calibrator</name>
    <version>1.0.0</version>
    <description>Package for performing lidar to camera calibration given a map and trajectory</description>
    <author email="nicholas.c.charron@gmail.com">Nick Charron</author>
    <maintainer email="nicholas.c.charron@gmail.com">Nick Charron</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>libbeam</build_depend>

</package>
